fixed overspill bug, gridcontainer should remain the same size despite more cells being added

--- a/style.css
+++ b/style.css
@@ -14,19 +14,19 @@ body{
 
 .gridContainer{
     
-   flex: 1 0 auto;
+   
    display: grid;
    grid-gap: 0px;
-   grid-template-rows: repeat(var(--gridRows), 1fr);
+   grid-template-rows: repeat(var(--gridRows), minmax(0, 1fr));
    grid-template-columns: repeat(var(--gridCol), 1fr);
    
     
     
-    border: 2px;
-    border-color: black;
-    border-style: solid;
-    height: 800px;
-    width: 800px;
+    
+    max-height: 40vw;
+    width: 50vw;
+    min-height: 0;
+   
     
 }
 
